# advent_of_code

./: pyproject.toml
advent_of_code_rust/: Cargo.toml
advent_of_code_rust/src/: main.rs
src/day1/: assignment1.py  assignment2.py
src/day10/: assignment1.py  assignment2.py  assignment2_speedup.py
src/day10/test/: test_assignment1.py  test_assignment2.py
src/day11/: assignment1.py  assignment2.py
src/day11/test/: test_assignment1.py  test_assignment2.py
src/day12/: alternative.py  assignment1.py  assignment2.py
src/day12/test/: test_alternative.py  test_assignment1.py  test_assignment2.py
src/day13/: assignment1.py  assignment2.py
src/day13/test/: test_assignment1.py  (+1 more)
src/day14/: assignment1.py  assignment2.py
src/day15/: assignment1.py  assignment2.py
src/day16/: assignment1.py  assignment2.py
src/day17/: assignment1.py  assignment2.py  improvements.py
src/day18/: assignment1.py  assignment2.py
src/day19/: assignment1.py  assignment2.py
src/day2/: assignment1.py  assignment2.py
src/day20/: assignment1.py  assignment2.py
src/day21/: alternative.py  assignment1.py  assignment2.py
src/day22/: assignment1.py  assignment2.py
src/day23/: alternative.py  assignment1.py  assignment2.py
src/day24/: assignment1.py  assignment2.py
src/day25/: assignment1.py
src/day3/: assignment1.py  assignment2.py
src/day4/: assignment1.py  assignment2.py
src/day5/: alternative.py  assignment1.py  assignment2.py
src/day6/: assignment1.py  assignment2.py
src/day7/: assignment1.py  assignment2.py
src/day8/: assignment1.py  assignment2.py
src/day9/: assignment1.py  assignment2.py
(+36 files in other folders)
