[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Tim Jonker <85954232+timjonkerpostnl@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
