[package]
name = "advent_of_code_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "wasmbind", "serde"] }
chrono-tz = "0.8.1"
rustc-hash = "1.1"
derive_more = "^0.99.0"
approx = "^0.5.1"
tracing = "^0.1"
tracing-subscriber = "^0.3"
tracing-test = "0.2.3"
rangemap = "^1.3.0"
itertools = "^0.10.3"
rstest = "^0.16.0"
thiserror = "1.0"
strum = {version = "^0.24.1", features = ["derive"]}

[dev-dependencies]
criterion = { version =  "^0.4.0", features = ["html_reports"] }
rand = "^0.8"
